# nt-pref-ls

./: .gitignore  README.md  pyproject.toml
nt_pref_ls/: indexer.py  server.py
